--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>My Second Commit</title>
     
     </head>
     <body>
 
 
-        
+
     </body>
 </html>
