added info to index

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <body>
         <h1>This is where it all begins!</h1>
 
+        <p>Git commands</p>
+        <ul>checkout /commit serial/
+            checkout master
+        </ul>
 
     </body>
 </html>
