added more info to index

--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
         <h1>This is where it all begins!</h1>
 
         <p>Git commands</p>
-        <ul>checkout /commit serial/
-            checkout master
+        <ul>
+            <li>checkout /commit serial/</li>
+                <ul>    
+                    <li>shows the master branch at that specfic commit - read only</li>
+                </ul>
+            <li>checkout master</li>
+                <ul>
+                    <li>returns the master to its previous state without any changes</li>
+                </ul>
+            <li></li>
         </ul>
 
     </body>
