--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
                 <ul>
                     <li>returns the master to its previous state without any changes</li>
                 </ul>
-            <li></li>
+            <li>revert /commit serial/</li>
+                <ul>
+                    <li>reverts to the specified commit, the other changes are still present just not committed</li>
+                </ul>
+            <li>reset /commit serial/</li>
+                <ul>
+                    <li>resets the repo to the specified commit, removes all other changes, not reverseable!</li>
+                </ul>
         </ul>
 
     </body>
