added styles to index

--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
         <h1>This is where it all begins!</h1>
 
         <p>Git commands</p>
-        <ul>
+        <ul style="list-style-type:none;">
             <li>checkout /commit serial/</li>
-                <ul>    
+                <ul style="list-style-type:none;">    
                     <li>shows the master branch at that specfic commit - read only</li>
                 </ul>
             <li>checkout master</li>
-                <ul>
+                <ul style="list-style-type:none;">
                     <li>returns the master to its previous state without any changes</li>
                 </ul>
             <li>revert /commit serial/</li>
-                <ul>
+                <ul style="list-style-type:none;">
                     <li>reverts to the specified commit, the other changes are still present just not committed</li>
                 </ul>
             <li>reset /commit serial/</li>
-                <ul>
+                <ul style="list-style-type:none;">
                     <li>resets the repo to the specified commit, removes all other changes, not reverseable!</li>
                 </ul>
         </ul>
