corrected info on index

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </ul>
             <li>revert /commit serial/</li>
                 <ul style="list-style-type:none;">
-                    <li>reverts to the specified commit, the other changes are still present just not committed</li>
+                    <li>reverts the specified commit, removes the changes</li>
                 </ul>
             <li>reset /commit serial/</li>
                 <ul style="list-style-type:none;">
