added new command info to index

--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
                 <ul style="list-style-type:none;">    
                     <li>shows a list of all branches</li>
                 </ul>
+            <li>merge /name of branch/</li>
+                <ul style="list-style-type:none;">    
+                    <li>mereges the branch to the actice branch</li>
+                </ul>
         </ul>
 
     </body>
