--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
         <title>My Second Commit</title>
-        <link href="styles.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>This is where it all begins!</h1>
