amended new push command

--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
                 <ul style="list-style-type:none;">    
                     <li>mereges the branch to the actice branch</li>
                 </ul>
+            <li>push /git URL or origin if assigned/ /branch name/</li>
+                <ul style="list-style-type:none;">    
+                    <li>mereges the branch to the actice branch</li>
+                </ul>
         </ul>
 
     </body>
